feat: edit config file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,6 @@
     "es2021": true,
     "node": true
   },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
   "overrides": [
     {
       "files": [
@@ -26,7 +21,6 @@
       ],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
-        "requireConfigFile": false,
         "ecmaFeatures": {
           "jsx": true
         },
@@ -34,10 +28,10 @@
         "sourceType": "module"
       },
       "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:react/recommended",
-        "plugin:prettier/recommended"
+        // "eslint:recommended",
+        // "plugin:@typescript-eslint/recommended",
+        // "plugin:react/recommended",
+        // "plugin:prettier/recommended"
       ],
       "rules": {
         "react/react-in-jsx-scope": "off",
