--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd": "^5.6.1",
     "axios": "^1.4.0",
     "cross-env": "^7.0.3",
+    "framer-motion": "^10.16.5",
     "i18next": "^22.5.1",
     "i18next-http-backend": "^2.2.1",
     "nprogress": "^0.2.0",
@@ -16,7 +17,8 @@
     "react-i18next": "^12.3.1",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0"
   },
   "scripts": {
     "dev": "cross-env VITE_ENV_TYPE=dev vite --mode dev",
@@ -49,6 +51,7 @@
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
+    "@types/youtube-player": "^5.5.11",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "@unocss/preset-uno": "^0.53.1",
